tests/basic/check/if/040.pan.out
tests/basic/check/if/040.pan:3:1-4: error: cannot solve constraints of f40
tests/basic/check/if/040.pan:6:1-4: error: cannot solve constraints of f41
tests/basic/check/if/040.pan:9:1-4: error: cannot solve constraints of f42
tests/basic/check/if/040.pan:12:1-4: error: cannot solve constraints of f43
tests/basic/check/if/040.pan:15:1-4: error: cannot solve constraints of f44
tests/basic/check/if/040.pan:18:1-4: error: cannot solve constraints of f45
tests/basic/check/if/040.pan:21:1-4: error: cannot solve constraints of f46
tests/basic/check/if/040.pan:24:1-4: error: cannot solve constraints of f47